--- a/src/components/NewsTray/NewsTray.css
+++ b/src/components/NewsTray/NewsTray.css
@@ -17,7 +17,7 @@
     visibility: hidden;
     transform: translateY(100%);
 
-    transition: transform .15s cubic-bezier(.42, 0, 1, 1);
+    transition: transform .15s cubic-bezier(.42, 0, 1, 1), visibility 0s 15s;
 }
 
 .news-tray_with_header {
@@ -36,6 +36,7 @@
 
     box-shadow: none;
 
+    visibility: visible;
     transform: translateY(0);
     transition: transform .3s cubic-bezier(.42, 0, 1, 1);
 }
